# venus

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vk_layer_settings.txt
cmake/: ConfigCompilerFlags.cmake  ExternalPrograms.cmake  GenerateDocs.cmake
docs/: 0_getting_started.md
docs/doxygen/: doxyfile.in
examples/: CMakeLists.txt  hello_ra.cpp  hellp_rt.cpp  main.cpp  sim_surface_field.cpp
ext/: CMakeLists.txt  catch2.cmake  fastgltf.cmake  glfw.cmake  glslang.cmake  hermes.cmake  imgui.cmake  openvdb.cmake  stb.cmake  tinyobj.cmake  vma.cmake  volk.cmake  vul.cmake
shaders/: CMakeLists.txt  base.glsl  bindless_test.vert  cartesian_grid.frag  cartesian_grid.vert  color.frag  color.vert  flat_color.frag  input_structures.glsl  mesh.vert  mesh_pbr.frag  scalar_field.frag  scalar_field.vert  sky_background.frag  sky_background.vert  test.vert  ve_vdb_volume.frag  ve_vdb_volume.vert
shaders/venus/: colors.glsl  debug.glsl  frag_debug.glsl  geometry.glsl  math.glsl  sampling.glsl  vert_debug.glsl  volume.glsl
venus/: CMakeLists.txt
venus/app/: display_app.cpp  display_app.h  graphics_device.cpp  graphics_device.h  renderer.cpp  renderer.h  scene.cpp  scene.h  scene_app.cpp  scene_app.h
venus/core/: debug.cpp  debug.h  device.cpp  device.h  device_queue.cpp  device_queue.h  instance.cpp  instance.h  physical_device.cpp  physical_device.h  result.h  sync.cpp  sync.h  time.cpp  time.h  types.h  vk.cpp  vk.h  vk_api.cpp  vk_api.h  vk_debug.h
venus/engine/: frame_loop.cpp  frame_loop.h  gltf_io.cpp  gltf_io.h  graphics_device.cpp  graphics_device.h  graphics_engine.cpp  graphics_engine.h  materials.cpp  materials.h  rasterizer.cpp  rasterizer.h  ray_tracer.cpp  ray_tracer.h  renderers.cpp  renderers.h  shapes.cpp  shapes.h
venus/io/: display.cpp  display.h  glfw_display.cpp  glfw_display.h  graphics_display.cpp  graphics_display.h  surface.cpp  surface.h  surface_khr.cpp  surface_khr.h  swapchain.cpp  swapchain.h
venus/mem/: buffer.cpp  buffer.h  device_memory.cpp  device_memory.h  image.cpp  image.h  layout.cpp  layout.h
venus/pipeline/: command_buffer.cpp  command_buffer.h  descriptors.cpp  descriptors.h  framebuffer.cpp  framebuffer.h  pipeline.cpp  pipeline.h  rasterizer.cpp  rasterizer.h  ray_tracer.cpp  ray_tracer.h  renderpass.cpp  renderpass.h  shader_module.cpp  shader_module.h
venus/scene/: acceleration_structure.cpp  acceleration_structure.h  camera.cpp  camera.h  material.cpp  material.h  materials.cpp  materials.h  model.cpp  model.h  scene_graph.cpp  scene_graph.h  texture.cpp  texture.h
venus/scene/helpers/: cartesian_grid.cpp  cartesian_grid.h  sky_background.cpp  sky_background.h
venus/scene/models/: cartesian_grid.cpp  cartesian_grid.h  sky_background.cpp  sky_background.h
venus/ui/: camera.cpp  camera.h  input.h
venus/utils/: debug.h  indexed_handle.h  macros.h  result.h  vk_debug.h
